
= 1.8.2.1 - 20/03/2020
* Fix - Unable to Login User Due to Pending Status.

= 1.8.2 - 18/03/2020
* Feature - Search Field introduced in form builder.
* Enhancement - Prevent Core Login enabled with redirect login page.
* Enhancement - WPML on multiple choice options.
* Refactor - Remove unnecessary CSS codes.
* Tweak - Custom class in submit button.
* Tweak - Password strength meter and password visibility enabled in change password.
* Fix - User Approval status in Users Section.
* Fix - Toggle option in field option's setting.
* Fix - pre_get_users hook placement.
* Fix - Password reset link validation.
* Fix - Incompatibility with password fields of other registration plugins.

= 1.8.1 - 13/02/2020
* Fix - Fatal error while installing the plugin.
* Fix - SweetAlert issue.

= 1.8.0 - 13/02/2020
* Feature - Login option introduced for individual forms.
* Feature - Allows selective country selection in country field.
* Enhancement - Date field
* Enhancement - Conditional logic in edit profile.
* Enhancement - Real time password matching.
* Enhancement - Real time email matching.
* Enhancement - Modal popup with documentation links on form creation.
* Enhancement - Form settings dropdown changed to checkbox.
* Enhancement - Premium fields showcase.
* Tweak 	  - Toggle feature added for field option's setting.
* Tweak		  - SweetAlert2 added in frontend.
* Tweak		  - CDN styling swapped with local file.
* Fix		  - Exclude unwanted fields in edit profile.
* Fix		  - Broken reset password link.

= 1.7.6 - 30/12/2019 =
* Enhancement - Registered user source.
* Tweak - Remove inline css from recaptcha.
* Fix - Email attachment hook mismatch arguments.
* Fix - wp_authenticate_user filter mismatch arguments.
* Fix - Hide/show password enabled in edit profile.

= 1.7.5 - 13/12/2019 =
* Enhancement - Redirect URL after logout.
* Enhancement - Password field eye icon.
* Fix - Escaping attribute in checkbox field.
* Fix - Remove admin notice from form builder.